--- a/templates/trick/edit.html.twig
+++ b/templates/trick/edit.html.twig
@@ -49,7 +49,7 @@
                                         </div>
                                         <div class="form-row">
                                             <div class="form-group col-md-12 text-center">
-                                                <p class="collection-head">Cliquez pour ajouter, supprimer ou modifier une vidéo (<u>Youtube uniquement</u>)</p>
+                                                <p class="collection-head">Cliquez pour ajouter une vidéo Youtube</p>
                                                 {{ form_widget(form.name) }}
                                                 <input type="hidden" id="video-counter" value="0">
                                                 <div class="form-group mt-2">
