--- a/public/css/style.css
+++ b/public/css/style.css
@@ -32,11 +32,12 @@ footer {
 
 .home-bg {
     background-image: url('/pictures/home.jpg');
-    background-size: cover;
+
     background-repeat: no-repeat;
-    background-position: 50% 50%;
+   left: 0;
+    right: 0;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     margin-top: 0;
 }
 
@@ -87,12 +88,13 @@ footer {
 }
 
 .card-img-top {
-    border-top-left-radius: 0.625rem;
-    border-top-right-radius: 0.625rem;
+    border-top-left-radius: 0.6rem;
+    border-top-right-radius: 0.6rem;
+    height: 200px;
 }
 
 .card-img-top.home {
-    height: 12rem;
+    height: 11rem;
 }
 
 .trick-link {
@@ -190,6 +192,38 @@ ol {
 
 /*-----------------------------------------------------------------------------------*/
 
+.cursor{
+    cursor: pointer;
+    padding:6px;
+}
+.chevron-up {
+    position: absolute;
+    right: 1%;
+    bottom: 0%;
+}
+
+.chevron-down {
+    position: absolute;
+    right: 0.3%;
+    bottom: 0%;
+}
+
+.cursor:hover{
+    color: darkred;
+}
+
+.fai{
+    position: absolute;
+    top: 25px;
+    right: 0px;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    color: #212529;
+    font-size: 1.6em;
+    background-color: white;
+    border: 1px solid black;
+}
+
 div.trick {
     display: none;
 }
@@ -218,11 +252,11 @@ body>div.container.mt-5>div>div>div.card.mt-5 {
     margin-bottom: 30px;
 }
 
-.padDiv {
+.Divpadding {
     padding: 30px 35px;
 }
 
-.cmt {
+.cment {
     background: #fff;
     border-radius: 0.625rem;
     box-shadow: 0 2px 0 rgba(90, 97, 105, 0.11), 0 4px 8px rgba(90, 97, 105, 0.12), 0 10px 10px rgba(90, 97, 105, 0.06), 0 7px 70px rgba(90, 97, 105, 0.1);
@@ -454,16 +488,16 @@ p.collection-head.first {
     border: none;
 }
 
+
+
 .counter-image,
 .counter-video {
-    font-size: 20px;
-    font-weight: bolder;
+    font-size: 18px;
     vertical-align: middle;
     margin-left: 1rem;
     padding: 0.7rem;
     color: black;
     border: 2px solid #d9534f;
-    border-radius: 0.625rem;
 }
 
 /*-----------------------------------------------------------------------------------*/
@@ -513,7 +547,7 @@ div.blog-comments__content>p {
 }
 
 .blog-comments__actions .btn-group button {
-    padding: .25rem .5625rem;
+    padding: .30rem .6rem;
 }
 
 .btn.btn-white {
@@ -541,9 +575,9 @@ i.material-icons.consult {
 
 .card-post__image {
     position: relative;
-    min-height: 10.3125rem;
-    border-top-left-radius: .625rem;
-    border-top-right-radius: .625rem;
+    min-height: 11rem;
+    border-top-left-radius: 1rem;
+    border-top-right-radius: 1rem;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -570,8 +604,9 @@ i.material-icons.consult {
 }
 
 .card-post__author-avatar {
-    width: 2.8125rem;
-    height: 2.8125rem;
+    width: 2.8rem;
+    height: 2.8rem;
+    height: 2.8rem;
     box-shadow: 0 0 0 0.125rem #fff, 0 0.1875rem 0.4375rem rgba(90, 97, 105, .5);
     display: block;
     background-position: center;
@@ -581,7 +616,7 @@ i.material-icons.consult {
 }
 
 .card-body.profile {
-    padding-top: 2.1875rem;
+    padding-top: 2rem;
 }
 
 .bg-card {
