--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -1,20 +1,42 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello UserController!{% endblock %}
-
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+    <div class="container mt-5">
+        <div class="row justify-content-center mt-5">
+            <div class="col-md-12 col-md-offset-1 mt-5 mb-4">
+                <body>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+                <div class="d-flex" id="wrapper">
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'C:/Users/Pc/Desktop/Projetsnow/src/Controller/UserController.php'|file_link(0) }}">src/Controller/UserController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'C:/Users/Pc/Desktop/Projetsnow/templates/user/_form.html.twig'|file_link(0) }}">templates/user/index.html.twig</a></code></li>
-    </ul>
-</div>
+                    <!-- Sidebar -->
+                    <div class="bg-light border-right" id="sidebar-wrapper">
+                        <div class="sidebar-heading">Dashboard</div>
+                        <div class="list-group list-group-flush">
+                            <a href="#" class="list-group-item list-group-item-action bg-light">Mes Données</a>
+                            <a href="#" class="list-group-item list-group-item-action bg-light">Mes tricks</a>
+                            <a href="#" class="list-group-item list-group-item-action bg-light">Mes commentaires</a>
+
+
+                        </div>
+                    </div>
+                    <!-- /#sidebar-wrapper -->
+
+                    <!-- Page Content -->
+                    <div id="page-content-wrapper">
+
+
+
+                        <div class="container-fluid">
+                            <h1 class="mt-4">asdfsdf</h1>
+
+                        </div>
+                    </div>
+
+
+                </body>
+            </div>
+        </div>
+    </div>
+
 {% endblock %}
+
