--- a/templates/user/login.html.twig
+++ b/templates/user/login.html.twig
@@ -40,7 +40,7 @@
                             </div>
                         </form>
                         <div class="text-center">
-                            <a href="">Mot de passe oublié ?</a>
+                            <a href="{{ path('account_forgot') }}">Mot de passe oublié ?</a>
                         </div>
                     </div>
                 </div>
