--- a/public/css/style.css
+++ b/public/css/style.css
@@ -87,10 +87,15 @@ footer {
     border-radius: 0.7rem;
 }
 
-.card-img-top {
+.card-img-trick {
     border-top-left-radius: 0.6rem;
     border-top-right-radius: 0.6rem;
     height: 200px;
+}
+
+.card-img-top {
+    border-top-left-radius: 0.6rem;
+    border-top-right-radius: 0.6rem;
 }
 
 .card-img-top.home {
